<resources>
    <string name="firewall_settingsk_Blocking_settings_0">设置</string>
    <string name="firewall_settingsk_open_mms_service">拦截陌生人彩信</string>
    <string name="firewall_settingsk_open_wappush_service">拦截浏览器信息</string>
    <string name="firewall_settingsk_open_hangup_hint_dialog_title">通话后提示加黑名单</string>
    <string name="firewall_settingsk_is_open">已开启</string>
    <string name="firewall_settingsk_closed">未开启</string>
    <string name="firewall_settingsk_open_hide_number_title">拦截隐藏号码来电</string>
    <string name="firewall_settingsk_intelligent_mode">智能模式</string>
    <string name="firewall_settingsk_auto_mode_summary">拦截黑名单、智能判断陌生短信和电话</string>
    <string name="firewall_settingsk_blacklist_mode">黑名单模式</string>
    <string name="firewall_settingsk_only_intercept_blacklist">只拦截黑名单的电话和短信</string>
    <string name="firewall_settingsk_whitelist_mode">白名单模式</string>
    <string name="firewall_settingsk_only_allow_whitelist">只接收白名单的电话和短信</string>
    <string name="firewall_settingsk_denyall_mode">拒接模式</string>
    <string name="firewall_settingsk_deny_all_summary">拦截所有的电话和短信</string>
    <string name="firewall_settingsk_Disturb_Mode">免打扰模式</string>
    <string name="firewall_settingsk_accept_only_whitelist_and_contacts">拦截黑名单和陌生人的电话和短信</string>
    <string name="firewall_settingsk_custom_mode">自定义模式</string>
    <string name="firewall_settingsk_custom_mode_edit">编辑自定义模式</string>
    <string name="firewall_settingsk_intelligence_intercept">智能拦截</string>
    <string name="firewall_settingsk_intelligent_judgments_of_strangers_on">智能判断陌生人的短信和电话 已开启</string>
    <string name="firewall_settingsk_intelligent_judgments_of_strangers_off">智能判断陌生人的短信和电话 已关闭</string>
    <string name="firewall_settingsk_block_blacklisted">拦截黑名单</string>
    <string name="firewall_settingsk_intercept_strangers_SMS">拦截所有陌生人短信</string>
    <string name="firewall_settingsk_intercept_strangers_phone">拦截所有陌生人电话</string>
    <string name="firewall_settingsk_block_keywords">拦截关键字</string>
    <string name="firewall_settingsk_hang_up_title">来电后直接挂断</string>
    <string name="firewall_settingsk_not_on_service_title">来电后提示空号</string>
    <string name="firewall_settingsk_turned_off_title">来电后提示已关机</string>
    <string name="firewall_settingsk_is_down_title">来电后提示已停机</string>
    <string name="firewall_settingsk_hang_up_key">firewall_settingsk_hang_up_key</string>
    <string name="firewall_settingsk_not_on_service_key">firewall_settingsk_not_on_service_key</string>
    <string name="firewall_settingsk_turned_off_key">firewall_settingsk_turned_off_key</string>
    <string name="firewall_settingsk_is_down_key">firewall_settingsk_is_down_key</string>
    <string name="firewall_settingsk_hang_up_info">当骚扰电话打进时,直接挂断,对方显示为您拨打的电话正在通话中</string>
    <string name="firewall_settingsk_not_on_service_info">当骚扰电话打进时,进行呼叫转移,对方显示为您拨打的电话是空号</string>
    <string name="firewall_settingsk_turned_off_info">当骚扰电话打进时,进行呼叫转移,对方显示为您拨打的电话已关机</string>
    <string name="firewall_settingsk_is_down_info">当骚扰电话打进时,进行呼叫转移,对方显示为您拨打的电话已停机</string>
    <string name="firewall_settingsk_set_custom_keyword">设置自定义关键字</string>
    <string name="firewall_settingsk_join_to_security_cloud_plan">加入云安全计划</string>
    <string name="kn_summary_on_firewall_settingsk_join_to_security_cloud_plan_summary">已开启 优化查杀和骚扰拦截效果</string>
    <string name="kn_summary_off_firewall_settingsk_join_to_security_cloud_plan_summary">未开启 优化查杀和骚扰拦截效果</string>
    <string name="firewall_settingsk_open_hangup_hint">通话后提示加黑名单</string>
    <string name="ip_dial_title">自动IP拨号</string>
    <string name="select_ipdial_header_title">选择IP号码</string>
    <string name="ip_dial_no_use_numbers_title">不用IP拨号的号码</string>
    <string name="ip_dial_no_use_numbers_location">不用IP拨号的地区</string>
    <string name="ip_dial_no_use_numbers">ip_dial_no_use_numbers</string>
    <string name="local_number_area_title">本机号码所属地区</string>
    <string name="firewall_log_sms_des">短信</string>
    <string name="firewall_log_call_des">电话</string>
    <string name="firewall_blackwhite_des">黑白名单</string>
    <string name="firewall_settingsk_join_to_security_cloud_plan_key">firewall_settingsk_join_to_security_cloud_plan_key</string>
    <string name="firewall_settingsk_block_mode_key">firewall_settingsk_block_mode_key</string>
    <string name="firewall_settingsk_intelligent_mode_key">firewall_settingsk_intelligent_mode_key</string>
    <string name="firewall_settingsk_blacklist_mode_key">firewall_settingsk_blacklist_mode_key</string>
    <string name="firewall_settingsk_whitelist_mode_key">firewall_settingsk_whitelist_mode_key</string>
    <string name="firewall_settingsk_denyall_mode_key">firewall_settingsk_denyall_mode_key</string>
    <string name="firewall_settingsk_Disturb_Mode_key">firewall_settingsk_Disturb_Mode_key</string>
    <string name="firewall_settingsk_custom_mode_key">firewall_settingsk_custom_mode_key</string>
    <string name="firewall_settingsk_custom_mode_edit_key">firewall_settingsk_custom_mode_edit_key</string>
    <string name="firewall_settingsk_open_mms_service_key">firewall_settingsk_open_mms_service_key</string>
    <string name="firewall_settingsk_open_wappush_service_key">firewall_settingsk_open_wappush_service_key</string>
    <string name="firewall_settingsk_open_hide_number_key">firewall_settingsk_open_hide_number_key</string>
    <string name="firewall_settingsk_intelligence_intercept_key">firewall_settingsk_intelligence_intercept_key2</string>
    <string name="firewall_settingsk_block_blacklisted_key">firewall_settingsk_block_blacklisted_key2</string>
    <string name="firewall_settingsk_intercept_strangers_SMS_key">firewall_settingsk_intercept_strangers_SMS_key2</string>
    <string name="firewall_settingsk_intercept_strangers_phone_key">firewall_settingsk_intercept_strangers_phone_key2</string>
    <string name="firewall_settingsk_block_keywords_key">firewall_settingsk_block_keywords_key2</string>
    <string name="firewall_settingsk_set_custom_keyword_key">firewall_settingsk_set_custom_keyword_key</string>
    <string name="firewall_settingsk_open_hangup_hint_key_2">firewall_settingsk_open_hangup_hint_key_2</string>
    <string name="desk_sms_start_up_title">开启快捷短信功能</string>
    <string name="desk_sms_start_up_key">desk_sms_start_up_key</string>
    <string name="desk_sms_recv_set_read_title">接收短信后设为已读</string>
    <string name="desk_sms_recv_set_read_key">desk_sms_recv_set_read_key</string>
    <string name="desk_sms_style_key">desk_sms_style_key</string>
    <string name="desk_sms_operat_key">desk_sms_operat_key</string>
    <string name="desk_sms_style_dialog_title">选择主题风格</string>
    <string name="desk_sms_operat_dialog_title">短信提示方式</string>
    <string name="desk_sms_style_title">快捷短信主题风格</string>
    <string name="desk_sms_operat_title">短信提示方式</string>
    <string name="about_title">关于</string>
    <string name="kn_summary_on">已开启</string>
    <string name="kn_summary_off">未开启</string>
    <string name="save_trafffic_model_white_key">save_trafffic_model_white_key</string>
    <string name="save_traffic_model_auto_key">save_traffic_model_auto_key</string>
    <string name="save_traffic_model_screen_off_key">save_traffic_model_screen_off_key</string>
    <string name="save_traffic_model_foreground_key">save_traffic_model_foreground_key</string>
    <string name="save_traffic_model_close_key">save_traffic_model_close_key</string>
    <string name="save_traffic_model_auto_title">智能省流模式</string>
    <string name="save_traffic_model_auto_summary">智能限制程序联网</string>
    <string name="save_traffic_model_screen_off_title">锁屏省流模式</string>
    <string name="save_traffic_model_screen_off_summary">锁屏时限制非白名单程序联网</string>
    <string name="save_traffic_model_foreground_title">前台省流模式</string>
    <string name="save_traffic_model_foreground_summary">使用时限制非白名单程序后台联网</string>
    <string name="save_trafffic_model_white_title">设置程序联网白名单</string>
    <string name="save_traffic_model_close_title">关闭省流模式</string>
    <string name="kn_traffis_open_network_notify_key_title">通知栏常驻图标</string>
    <string name="kn_traffis_open_monitor_tray_key">kn_traffis_open_monitor_tray_key</string>
    <string name="main_menu_setting">设置</string>
    <string name="main_menu_update_net">检查更新</string>
    <string name="main_menu_wap">进入论坛</string>
    <string name="main_menu_user_recommended">推荐好友</string>
    <string name="main_menu_suggestion_feedback_header">意见反馈</string>
    <string name="commumgr_extra_call_title">来电归属地显示</string>
    <string name="commumgr_settings_intercept">拦截选项</string>
    <string name="commumgr_settings_report">举报设置</string>
    <string name="commumgr_settings_auto_report_only_wifi">仅在Wifi环境下自动举报</string>
    <string name="commumgr_settings_auto_report_on_intercept">拦截可疑号码后自动举报</string>
    <string name="commumgr_settings_report_include_message">举报短信时上报短信内容</string>
    <string name="commumgr_settings_auto_report_only_wifi_key">commumgr_settings_auto_report_only_wifi_key</string>
    <string name="commumgr_settings_auto_report_on_intercept_key">commumgr_settings_auto_report_on_intercept_key</string>
    <string name="commumgr_settings_report_include_message_key">commumgr_settings_report_include_message_key</string>
    <string name="intercept_call_rule_key">intercept_call_rule</string>
    <string name="intercept_call_rule_title">电话拦截规则</string>
    <string name="intercept_sms_rule_key">intercept_sms_rule</string>
    <string name="intercept_sms_rule_title">短信拦截规则</string>
    <string name="enable_blacklist_intercept_notify_key">enable_blacklist_intercept_notify</string>
    <string name="enable_blacklist_intercept_notify">拦截黑名单时弹出提示</string>
    <string name="enable_dubious_intercept_notify_key">enable_blacklist_dubious_notify</string>
    <string name="enable_dubious_intercept_notify">拦截可疑号码时弹出提示</string>
    <string name="enable_scm_sp_alert_key">enable_scm_sp_alert_key</string>
    <string name="scm_sp_alert_setting_text">收到服务信息时弹出提示</string>
    <string name="timing_one_click_accelerate_started">已开启</string>
    <string name="timing_one_click_accelerate_stoped">未开启</string>
    <string name="public_pref_function">功能设置</string>
    <string name="public_pref_cloud_scan">自动联网云查杀</string>
    <string name="public_pref_cloud_scan_key">public_pref_cloud_scan_key</string>
    <string name="public_pref_autoupdate">升级设置</string>
    <string name="public_pref_confirm_startup_autoupdate">Wi-Fi下每日自动检测更新</string>
    <string name="public_pref_confirm_startup_autoupdate_on">已开启 软件版本+库版本</string>
    <string name="public_pref_confirm_startup_autoupdate_off">未开启 软件版本+库版本</string>
    <string name="public_pref_startup_autoupdate_in_wifi_model">Wi-Fi下自动下载升级包</string>
    <string name="bugfeed_title">软件改善计划</string>
    <string name="usage_key">isEnableSendUsage</string>
    <string name="usage_text">WI-FI下报告手机卫士使用情况</string>
    <string name="contact_setting_notification_title">提示方式</string>
    <string name="protection_setting_open_protect_key">protection_setting_open_protect_key</string>
    <string name="protection_setting_modify_passward_key">protection_setting_modify_passward_key</string>
    <string name="protection_setting_modify_phone_key">protection_setting_modify_phone_key</string>
    <string name="protection_setting_change_card_lock_key">protection_setting_change_card_lock_key</string>
    <string name="protection_setting_open_uninstall_protect_key">protection_setting_open_uninstall_protect_key</string>
    <string name="protection_setting_white_add_key">protection_setting_white_add_key</string>
    <string name="protection_setting_open_protect">防盗保护</string>
    <string name="protection_setting_modify_passward">防盗密码</string>
    <string name="protection_setting_modify_phone">安全手机号</string>
    <string name="protection_setting_change_card_lock">换卡锁定</string>
    <string name="protection_setting_open_uninstall_protect">卸载保护</string>
    <string name="protection_setting_white_add">SIM卡白名单</string>
    <string name="desk_sms">桌面快捷短信</string>
</resources>