<?xml version="1.0" encoding="utf-8"?>
<com.ijinshan.kpref.PreferenceScreen android:key="kn_protection_setting_preferences"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/protection_setting_open_protect" android:key="@string/protection_setting_open_protect_key" android:widgetLayout="@layout/list_right_checkbox" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.PreferenceScreen android:title="@string/protection_setting_modify_passward" android:key="@string/protection_setting_modify_passward_key" android:widgetLayout="@layout/list_right_icon" />
    <com.ijinshan.kpref.PreferenceScreen android:title="@string/protection_setting_modify_phone" android:key="@string/protection_setting_modify_phone_key" android:widgetLayout="@layout/list_right_icon" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/protection_setting_change_card_lock" android:key="@string/protection_setting_change_card_lock_key" android:widgetLayout="@layout/list_right_checkbox" android:dependency="@string/protection_setting_open_protect_key" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/protection_setting_open_uninstall_protect" android:key="@string/protection_setting_open_uninstall_protect_key" android:widgetLayout="@layout/list_right_checkbox" android:dependency="@string/protection_setting_open_protect_key" />
    <com.ijinshan.kpref.PreferenceScreen android:title="@string/protection_setting_white_add" android:key="@string/protection_setting_white_add_key" android:widgetLayout="@layout/list_right_icon" />
</com.ijinshan.kpref.PreferenceScreen>