<?xml version="1.0" encoding="utf-8"?>
<com.ijinshan.kpref.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_intelligence_intercept" android:key="@string/firewall_settingsk_intelligence_intercept_key" android:widgetLayout="@layout/list_right_checkbox" android:defaultValue="true" android:summaryOn="@string/firewall_settingsk_intelligent_judgments_of_strangers_on" android:summaryOff="@string/firewall_settingsk_intelligent_judgments_of_strangers_off" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_block_blacklisted" android:key="@string/firewall_settingsk_block_blacklisted_key" android:widgetLayout="@layout/list_right_checkbox" android:defaultValue="true" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_open_mms_service" android:key="@string/firewall_settingsk_open_mms_service_key" android:widgetLayout="@layout/list_right_checkbox" android:defaultValue="true" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_open_wappush_service" android:key="@string/firewall_settingsk_open_wappush_service_key" android:widgetLayout="@layout/list_right_checkbox" android:defaultValue="true" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_open_hide_number_title" android:key="@string/firewall_settingsk_open_hide_number_key" android:widgetLayout="@layout/list_right_checkbox" android:defaultValue="false" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_intercept_strangers_SMS" android:key="@string/firewall_settingsk_intercept_strangers_SMS_key" android:widgetLayout="@layout/list_right_checkbox" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_intercept_strangers_phone" android:key="@string/firewall_settingsk_intercept_strangers_phone_key" android:widgetLayout="@layout/list_right_checkbox" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.CheckBoxPreference android:title="@string/firewall_settingsk_block_keywords" android:key="@string/firewall_settingsk_block_keywords_key" android:widgetLayout="@layout/list_right_checkbox" android:summaryOn="@string/firewall_settingsk_is_open" android:summaryOff="@string/firewall_settingsk_closed" />
    <com.ijinshan.kpref.PreferenceScreen android:title="@string/firewall_settingsk_set_custom_keyword" android:key="@string/firewall_settingsk_set_custom_keyword_key" android:widgetLayout="@layout/list_right_icon" android:dependency="@string/firewall_settingsk_block_keywords_key" />
</com.ijinshan.kpref.PreferenceScreen>