<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_setting" android:id="@id/menu_setting" android:orderInCategory="0" android:title="@string/main_menu_setting" />
    <item android:icon="@drawable/ic_menu_update" android:id="@id/menu_update_net" android:orderInCategory="1" android:title="@string/main_menu_update_net" />
    <item android:icon="@drawable/ic_menu_goto" android:id="@id/menu_wap" android:orderInCategory="2" android:title="@string/main_menu_wap" />
    <item android:icon="@drawable/ic_menu_share" android:id="@id/menu_user_recommended" android:orderInCategory="3" android:title="@string/main_menu_user_recommended" />
    <item android:icon="@drawable/ic_menu_suggestion" android:id="@id/menu_suggestion_feedback" android:orderInCategory="4" android:title="@string/main_menu_suggestion_feedback_header" />
    <item android:icon="@drawable/ic_menu_about" android:id="@id/menu_about" android:orderInCategory="5" android:title="@string/about_title" />
</menu>