<?xml version="1.0" encoding="utf-8"?>
<TabHost android:id="@*android:id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RadioGroup android:gravity="top" android:orientation="horizontal" android:id="@id/main_radio" android:background="@drawable/traffic_main_tab_widget_background" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <RadioButton android:id="@id/radio_button0" android:tag="radio_button0" android:text="@string/firewall_log_sms_des" style="@style/traffic_main_tab_top" />
            <RadioButton android:id="@id/radio_button1" android:tag="radio_button1" android:text="@string/firewall_log_call_des" style="@style/traffic_main_tab_top" />
            <RadioButton android:id="@id/radio_button2" android:tag="radio_button2" android:text="@string/firewall_blackwhite_des" style="@style/traffic_main_tab_top" />
            <RadioButton android:id="@id/radio_button4" android:tag="radio_button2" android:text="@string/firewall_settingsk_Blocking_settings_0" style="@style/traffic_main_tab_top" />
        </RadioGroup>
        <TabWidget android:id="@*android:id/tabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <FrameLayout android:id="@*android:id/tabcontent" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
</TabHost>